changed png to webp

--- a/assembly/footer.html
+++ b/assembly/footer.html
@@ -10,7 +10,7 @@
       <div class="footer_title">ABOUT ME</div>
       <ul>
         <li>Ziwei(Vivien) Wei <a href="https://www.linkedin.com/in/vivien-wee-b032452a3/" id="linkedin"
-            target="_blank"><img src="asset/icon/linkedin.png" alt="linkedin icon"></a></li>
+            target="_blank"><img src="asset/icon/linkedin.webp" alt="linkedin icon"></a></li>
         <li>u7733544@anu.edu.au</li>
         <li><a href="passion.html">My Passion</a></li>
       </ul>
