--- a/assembly/navbar.html
+++ b/assembly/navbar.html
@@ -1,10 +1,10 @@
 <ul class="nav_div">
   <li class="nav_logo"><a href="index.html" aria-label="Home Page">GreenShell</a></li>
   <li class="nav_mode"><a href="javascript:void(0);" class="icon" aria-label="Toggle Mode">
-      <img src="asset/icon/mode.png" alt="mode">
+      <img src="asset/icon/mode.webp" alt="mode">
     </a></li>
   <li class="nav_categories"><a href="#categories" class="icon" aria-label="Categories">
-      <img src="asset/icon/categories.png" alt="categories">categories
+      <img src="asset/icon/categories.webp" alt="categories">categories
     </a>
   </li>
   <li class="nav_search">
@@ -16,10 +16,10 @@
     </form>
   </li>
   <li class="nav_sign_in"><a href="login.html" aria-label="Log in Page">Log in</a></li>
-  <li class="nav_language"><a href="#language" aria-label="Change Language"><img src="asset/icon/AU.png"
+  <li class="nav_language"><a href="#language" aria-label="Change Language"><img src="asset/icon/AU.webp"
         alt="language"></a></li>
-  <li class="nav_liked"><a href="#liked" class="icon" aria-label="Liked Items"><img src="asset/icon/liked.png"
+  <li class="nav_liked"><a href="#liked" class="icon" aria-label="Liked Items"><img src="asset/icon/liked.webp"
         alt="liked"></a></li>
-  <li class="nav_cart"><a href="#cart" class="icon" aria-label="Shopping Cart"><img src="asset/icon/cart.png"
+  <li class="nav_cart"><a href="#cart" class="icon" aria-label="Shopping Cart"><img src="asset/icon/cart.webp"
         alt="cart"></a></li>
 </ul>
