--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="asset/icon/logo.ico" type="image/x-icon" />
@@ -16,12 +17,12 @@
   <header class="header_div">
     <div class="header_left_box">
       <div class="header_carousel">
-        <div class="carousel_box"><img src="asset/img/carousel/1.png" alt="Featured product image 1"></div>
-        <div class="carousel_box"><img src="asset/img/carousel/2.png" alt="Featured product image 2"></div>
-        <div class="carousel_box"><img src="asset/img/carousel/3.png" alt="Featured product image 3"></div>
-        <div class="carousel_box"><img src="asset/img/carousel/4.png" alt="Featured product image 4"></div>
-        <div class="carousel_box"><img src="asset/img/carousel/5.png" alt="Featured product image 5"></div>
-        <div class="carousel_box"><img src="asset/img/carousel/6.png" alt="Featured product image 6"></div>
+        <div class="carousel_box"><img src="asset/img/carousel/1.webp" alt="Featured product image 1"></div>
+        <div class="carousel_box"><img src="asset/img/carousel/2.webp" alt="Featured product image 2"></div>
+        <div class="carousel_box"><img src="asset/img/carousel/3.webp" alt="Featured product image 3"></div>
+        <div class="carousel_box"><img src="asset/img/carousel/4.webp" alt="Featured product image 4"></div>
+        <div class="carousel_box"><img src="asset/img/carousel/5.webp" alt="Featured product image 5"></div>
+        <div class="carousel_box"><img src="asset/img/carousel/6.webp" alt="Featured product image 6"></div>
 
         <div class="carousel_left" id="carousel_left">&lt;</div>
         <div class="carousel_right" id="carousel_right">&gt;</div>
@@ -55,13 +56,13 @@
       </div>
       <div class="bs_div">
         <div>
-          <a href="#link" aria-label="Recycled Glass Bottle"><img src="asset/img/bestsell/1.png"
+          <a href="#link" aria-label="Recycled Glass Bottle"><img src="asset/img/bestsell/1.webp"
               alt="Recycled Glass Bottle"></a>
           <p class="bs_title"><a href="#link" aria-label="Recycled Glass Bottle">Recycled Glass Bottle</a></p>
           <p class="bs_price"><a href="#link" aria-label="Price $17.10">$17.10</a></p>
         </div>
         <div>
-          <a href="#link" aria-label="Reusable Shopping Bags"><img src="asset/img/bestsell/4.png"
+          <a href="#link" aria-label="Reusable Shopping Bags"><img src="asset/img/bestsell/2.webp"
               alt="Reusable Shopping Bags"></a>
           <p class="bs_title"><a href="#link" aria-label="Reusable Shopping Bags">Reusable Shopping Bags</a></p>
           <p class="bs_price"><a href="#link" aria-label="Price $67.80">$67.80</a></p>
@@ -73,42 +74,42 @@
       </div>
       <div class="categories_div" id="categories">
         <div>
-          <a href="#clothes" aria-label="Clothes Category"><img src="asset/img/categories/clothes.png"
+          <a href="#clothes" aria-label="Clothes Category"><img src="asset/img/categories/clothes.webp"
               alt="Clothes category image"></a>
           <a href="#clothes" aria-label="Clothes Category">
             <p>Clothes</p>
           </a>
         </div>
         <div>
-          <a href="#personal-care" aria-label="Personal Care Category"><img src="asset/img/categories/personal care.png"
-              alt="Personal Care category image"></a>
+          <a href="#personal-care" aria-label="Personal Care Category"><img
+              src="asset/img/categories/personal care.webp" alt="Personal Care category image"></a>
           <a href="#personal-care" aria-label="Personal Care Category">
             <p>Personal Care</p>
           </a>
         </div>
         <div>
-          <a href="#household" aria-label="Household Category"><img src="asset/img/categories/household.png"
+          <a href="#household" aria-label="Household Category"><img src="asset/img/categories/household.webp"
               alt="Household category image"></a>
           <a href="#household" aria-label="Household Category">
             <p>Household</p>
           </a>
         </div>
         <div>
-          <a href="#kitchen" aria-label="Kitchen Category"><img src="asset/img/categories/kitchen.png"
+          <a href="#kitchen" aria-label="Kitchen Category"><img src="asset/img/categories/kitchen.webp"
               alt="kitchen category image"></a>
           <a href="#kitchen" aria-label="Kitchen Category">
             <p>Kitchen</p>
           </a>
         </div>
         <div>
-          <a href="#office" aria-label="Office Category"><img src="asset/img/categories/office.png"
+          <a href="#office" aria-label="Office Category"><img src="asset/img/categories/office.webp"
               alt="office category image"></a>
           <a href="#office" aria-label="Office Category">
             <p>Office</p>
           </a>
         </div>
         <div>
-          <a href="#pets" aria-label="Pets Category"><img src="asset/img/categories/pets.png"
+          <a href="#pets" aria-label="Pets Category"><img src="asset/img/categories/pets.webp"
               alt="pets category image"></a>
           <a href="#pets" aria-label="Pets Category">
             <p>Pets</p>
@@ -119,14 +120,14 @@
         <h2>&nbsp;&nbsp;Discover More&nbsp;&nbsp;</h2>
       </div>
       <div class="dm_div">
-        <!-- <a href="#link"><img src="asset/img/discovermore/1.png" alt="product image 1"></a> -->
+        <!-- <a href="#link"><img src="asset/img/discovermore/1.webp" alt="product image 1"></a> -->
         <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag"
-            aria-label="Powered by Curator.io">Powered by Curator.io</a></div>
-        <a href="#link" aria-label="Product Image 2"><img src="asset/img/discovermore/2.png" alt="product image 2"></a>
-        <a href="#link" aria-label="Product Image 3"><img src="asset/img/discovermore/4.png" alt="product image 3"></a>
-        <a href="#link" aria-label="Product Image 4"><img src="asset/img/discovermore/3.png" alt="product image 4"></a>
-        <a href="#link" aria-label="Product Image 5"><img src="asset/img/discovermore/5.png" alt="product image 5"></a>
-        <a href="#link" aria-label="Product Image 6"><img src="asset/img/discovermore/6.png" alt="product image 6"></a>
+            aria-label="Facebook feed">Powered by Curator.io</a></div>
+        <a href="#link" aria-label="Product Image 2"><img src="asset/img/discovermore/2.webp" alt="product image 2"></a>
+        <a href="#link" aria-label="Product Image 3"><img src="asset/img/discovermore/4.webp" alt="product image 3"></a>
+        <a href="#link" aria-label="Product Image 4"><img src="asset/img/discovermore/3.webp" alt="product image 4"></a>
+        <a href="#link" aria-label="Product Image 5"><img src="asset/img/discovermore/5.webp" alt="product image 5"></a>
+        <a href="#link" aria-label="Product Image 6"><img src="asset/img/discovermore/6.webp" alt="product image 6"></a>
       </div>
       <!-- product material scroll photo wall -->
       <div class="materials_title">
@@ -134,28 +135,28 @@
       </div>
       <div class="materials_container">
         <div class="materials_div">
-          <a href="#link" aria-label="Bamboo Material"><img src="asset/img/materials/bamboo.png" alt="bamboo"
+          <a href="#link" aria-label="Bamboo Material"><img src="asset/img/materials/bamboo.webp" alt="bamboo"
               title="Bamboo: Fast-growing and sustainable, it is used for a wide range of purposes, such as making furniture and flooring."></a>
-          <a href="#link" aria-label="Cork Material"><img src="asset/img/materials/cork.png" alt="cork"
+          <a href="#link" aria-label="Cork Material"><img src="asset/img/materials/cork.webp" alt="cork"
               title="Cork: made from the bark of the cork oak tree, renewable, waterproof and non-slip, commonly used for flooring and wall panels."></a>
-          <a href="#link" aria-label="Cotton Material"><img src="asset/img/materials/cotton.png" alt="cotton"
+          <a href="#link" aria-label="Cotton Material"><img src="asset/img/materials/cotton.webp" alt="cotton"
               title="Organic cotton: no pesticides and fertilizers, eco-friendly, used to make clothing, bedding and other textiles."></a>
-          <a href="#link" aria-label="Corn Plastic Material"><img src="asset/img/materials/corn plastic.png"
+          <a href="#link" aria-label="Corn Plastic Material"><img src="asset/img/materials/corn-plastic.webp"
               alt="corn plastic"
               title="Corn plastic: made from corn starch, biodegradable, commonly used in the production of disposable tableware, packaging and so on."></a>
-          <a href="#link" aria-label="Coconut Fiber Material"><img src="asset/img/materials/coconut fiber.png"
+          <a href="#link" aria-label="Coconut Fiber Material"><img src="asset/img/materials/coconut-fiber.webp"
               alt="coconut fiber"
               title="Coconut fiber: taken from the coconut shell, can be used to make carpets, ropes, brushes and so on."></a>
-          <a href="#link" aria-label="Bamboo Material"><img src="asset/img/materials/bamboo.png" alt="bamboo"
+          <a href="#link" aria-label="Bamboo Material"><img src="asset/img/materials/bamboo.webp" alt="bamboo"
               title="Bamboo: Fast-growing and sustainable, it is used for a wide range of purposes, such as making furniture and flooring."></a>
-          <a href="#link" aria-label="Cork Material"><img src="asset/img/materials/cork.png" alt="cork"
+          <a href="#link" aria-label="Cork Material"><img src="asset/img/materials/cork.webp" alt="cork"
               title="Cork: made from the bark of the cork oak tree, renewable, waterproof and non-slip, commonly used for flooring and wall panels."></a>
-          <a href="#link" aria-label="Cotton Material"><img src="asset/img/materials/cotton.png" alt="cotton"
+          <a href="#link" aria-label="Cotton Material"><img src="asset/img/materials/cotton.webp" alt="cotton"
               title="Organic cotton: no pesticides and fertilizers, eco-friendly, used to make clothing, bedding and other textiles."></a>
-          <a href="#link" aria-label="Corn Plastic Material"><img src="asset/img/materials/corn plastic.png"
+          <a href="#link" aria-label="Corn Plastic Material"><img src="asset/img/materials/corn-plastic.webp"
               alt="corn plastic"
               title="Corn plastic: made from corn starch, biodegradable, commonly used in the production of disposable tableware, packaging and so on."></a>
-          <a href="#link" aria-label="Coconut Fiber Material"><img src="asset/img/materials/coconut fiber.png"
+          <a href="#link" aria-label="Coconut Fiber Material"><img src="asset/img/materials/coconut-fiber.webp"
               alt="coconut fiber"
               title="Coconut fiber: taken from the coconut shell, can be used to make carpets, ropes, brushes and so on."></a>
 
